--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -5,28 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HttpURLConnectionActivity"
-    android:orientation="vertical">
-
-    <!--滚动-->
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="550dp">
+    android:orientation="vertical"
+    android:background="#FFF5EE">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/tv_textView"
                 android:text="第三方数据显示"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="560dp"
+                android:textSize="20sp"
+                android:textColor="#8B8386"/>
 
-            <!--<ImageView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content" />-->
+
 
         </LinearLayout>
-    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
